--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.ashu</groupId>
 	<artifactId>spring-boot-kubernetes</artifactId>
-	<version>4.0.0</version>
+	<version>4.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>spring-boot-kubernetes</name>
@@ -15,12 +15,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.4.3</version>
 		<relativePath />
 	</parent>
 
 	<properties>
 		<java.version>11</java.version>
+		<jkube.version>1.1.1</jkube.version>
 	</properties>
 
 	<dependencies>
@@ -38,12 +39,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -54,16 +49,10 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>4.4.1</version>
+				<groupId>org.eclipse.jkube</groupId>
+				<artifactId>kubernetes-maven-plugin</artifactId>
+				<version>${jkube.version}</version>
 			</plugin>
 		</plugins>
 	</build>
-
-
-	<scm>
-		<url>https://github.com/ashutoshsahoo/spring-boot-kubernetes</url>
-		<developerConnection>Ashutosh Sahoo</developerConnection>
-	</scm>
 </project>
