Update java version to 17

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,11 +1,11 @@
-FROM adoptopenjdk:11-jre-hotspot as builder
+FROM openjdk:17-oracle as builder
 WORKDIR /usr/local/temp
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
-FROM adoptopenjdk:11-jre-hotspot
-ARG VERSION
+FROM openjdk:17-oracle
+ARG VERSION=1.0.0
 LABEL version=${VERSION}
 LABEL maintainer="Ashutosh Sahoo"
 LABEL description="Sample spring boot application"
