--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,19 +1,20 @@
-FROM openjdk:17-oracle as builder
+FROM openjdk:17-slim as builder
 WORKDIR /usr/local/temp
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
-FROM openjdk:17-oracle
+FROM openjdk:17-slim
 ARG VERSION=1.0.0
 LABEL version=${VERSION}
 LABEL maintainer="Ashutosh Sahoo"
-LABEL description="Sample spring boot application"
+LABEL description="Sample spring boot application for k8s environment"
 
 WORKDIR /usr/local/app
+RUN useradd --user-group --system --create-home --no-log-init app
+USER app
 COPY --from=builder /usr/local/temp/dependencies/ ./
 COPY --from=builder /usr/local/temp/spring-boot-loader/ ./
 COPY --from=builder /usr/local/temp/snapshot-dependencies/ ./
-#COPY --from=builder /usr/local/temp/resources/ ./
 COPY --from=builder /usr/local/temp/application/ ./
 ENTRYPOINT ["java","org.springframework.boot.loader.JarLauncher"]
