--- a/deploy/kubernetes.yml
+++ b/deploy/kubernetes.yml
@@ -7,7 +7,7 @@ items:
     metadata:
       labels:
         app: spring-boot-kubernetes
-        version: 6.1.0
+        version: 6.2.0
       name: spring-boot-kubernetes
     spec:
       ports:
@@ -24,11 +24,9 @@ items:
     metadata:
       labels:
         app: spring-boot-kubernetes
-        version: 6.1.0
+        version: 6.2.0
       name: spring-boot-kubernetes
     spec:
-      replicas: 1
-      revisionHistoryLimit: 2
       selector:
         matchLabels:
           app: spring-boot-kubernetes
@@ -36,11 +34,11 @@ items:
         metadata:
           labels:
             app: spring-boot-kubernetes
-            version: 6.1.0
+            version: 6.2.0
         spec:
           containers:
             - name: spring-boot-kubernetes
-              image: ashutoshsahoo/spring-boot-kubernetes:6.1.0
+              image: ashutoshsahoo/spring-boot-kubernetes:6.2.0
               imagePullPolicy: IfNotPresent
               resources:
                 limits:
@@ -53,3 +51,6 @@ items:
                 - containerPort: 8080
                   name: http
                   protocol: TCP
+              env:
+                - name: SPRING_PROFILES_ACTIVE
+                  value: k8s
