--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.ashu</groupId>
     <artifactId>spring-boot-kubernetes</artifactId>
-    <version>6.1.0</version>
+    <version>6.2.0</version>
     <packaging>jar</packaging>
 
     <name>spring-boot-kubernetes</name>
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>2.6.6</version>
         <relativePath/>
     </parent>
 
@@ -23,12 +23,18 @@
         <java.version>17</java.version>
         <jkube.version>1.7.0</jkube.version>
         <git-commit-id.version>5.0.0</git-commit-id.version>
+        <logstash-logback-encoder.version>7.1.1</logstash-logback-encoder.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash-logback-encoder.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
