--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ashu</groupId>
+    <groupId>com.ashu.practice</groupId>
     <artifactId>spring-boot-kubernetes</artifactId>
-    <version>7.0.0</version>
+    <version>7.2.0</version>
     <packaging>jar</packaging>
 
     <name>spring-boot-kubernetes</name>
@@ -15,15 +15,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.1.2</version>
         <relativePath/>
     </parent>
 
     <properties>
         <java.version>17</java.version>
-        <jkube.version>1.9.1</jkube.version>
-        <git-commit-id.version>5.0.0</git-commit-id.version>
-        <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
+        <jkube.version>1.13.1</jkube.version>
+        <git-commit-id.version>6.0.0</git-commit-id.version>
+        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
     </properties>
 
     <dependencies>
@@ -41,7 +41,6 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
